WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/Application_History__c.object-meta.xml
<CustomObject>
    <description>Designed to capture and extrapolate the total amount of time an application spent with the Credit team.</description>
    <label>Application History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Application History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>