WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/fields/App_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>App_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The last person to modify the application.</description>
    <inlineHelpText>The last person to modify the application.</inlineHelpText>
    <label>App Last Modified by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>