WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/fields/CP_App__c.field-meta.xml
<CustomField>
    <fullName>CP_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Corporate Payment associated with this record.</description>
    <label>CP App</label>
    <referenceTo>CP_Application_Request__c</referenceTo>
    <relationshipLabel>Application Histories</relationshipLabel>
    <relationshipName>Application_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>