WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created_Date_Time</label>
    <type>DateTime</type>
</CustomField>