WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/fields/Credit_Decision__c.field-meta.xml
<CustomField>
    <fullName>Credit_Decision__c</fullName>
    <description>Credit Decision made on the application.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>