WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/fields/Credit_Info_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Info_Status__c</fullName>
    <description>Info Needed signifies the application being returned to Sales. Info Returned signifying the app is being returned to credit.</description>
    <label>Credit Info Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info Needed</fullName>
            </value>
            <value>
                <fullName>Info Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>