WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The CreatedDate of the next record. Shows the total time the app sat in it&apos;s last state.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>