WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/fields/In_Credit__c.field-meta.xml
<CustomField>
    <fullName>In_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True is the application is currently with the credit team.</description>
    <label>In Credit</label>
    <type>Checkbox</type>
</CustomField>