WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/fields/NA_Fleet_App__c.field-meta.xml
<CustomField>
    <fullName>NA_Fleet_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Application Request associated with this record.</description>
    <label>NA Fleet App</label>
    <referenceTo>Application_Request__c</referenceTo>
    <relationshipLabel>Application Histories</relationshipLabel>
    <relationshipName>Application_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>