WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/fields/OTR_App__c.field-meta.xml
<CustomField>
    <fullName>OTR_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The online application associated with this record.</description>
    <label>OTR App</label>
    <referenceTo>OnlineApplication__c</referenceTo>
    <relationshipLabel>Application Histories</relationshipLabel>
    <relationshipName>Application_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>