WexGit/Wex_DX/force-app/main/default/objects/Application_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current Status of the application.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>